refactor: - 项目统计现在先读缓存，再回源计算并回写缓存 - 写入链路的失效点也补齐,评分提交会清项目统计缓存，项目新建、编辑、结束也会清理